// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-bbpa7d,
[data-css-bbpa7d] {
  display: block;
  margin: auto;
  background-color: #0C98EB;
  min-height: 100vh;
  max-width: 50em;
}

<StyledContainer>
  <div
    className="css-bbpa7d"
  />
</StyledContainer>
`;

exports[`enzyme.mount 2`] = `
.css-bbpa7d,
[data-css-bbpa7d] {
  display: block;
  margin: auto;
  background-color: #0C98EB;
  min-height: 100vh;
  max-width: 50em;
}

<StyledContainer
  size={true}
>
  <div
    className="css-bbpa7d"
  />
</StyledContainer>
`;

exports[`enzyme.mount 3`] = `
.css-y4xjd7,
[data-css-y4xjd7] {
  display: block;
  margin: auto;
  background-color: #042C43;
  min-height: 100vh;
  max-width: 50em;
}

<StyledContainer
  color={true}
>
  <div
    className="css-y4xjd7"
  />
</StyledContainer>
`;

exports[`enzyme.render 1`] = `
.css-bbpa7d,
[data-css-bbpa7d] {
  display: block;
  margin: auto;
  background-color: #0C98EB;
  min-height: 100vh;
  max-width: 50em;
}

<div
  class="css-bbpa7d"
/>
`;

exports[`enzyme.render 2`] = `
.css-bbpa7d,
[data-css-bbpa7d] {
  display: block;
  margin: auto;
  background-color: #0C98EB;
  min-height: 100vh;
  max-width: 50em;
}

<div
  class="css-bbpa7d"
/>
`;

exports[`enzyme.render 3`] = `
.css-y4xjd7,
[data-css-y4xjd7] {
  display: block;
  margin: auto;
  background-color: #042C43;
  min-height: 100vh;
  max-width: 50em;
}

<div
  class="css-y4xjd7"
/>
`;

exports[`enzyme.shallow 1`] = `
.css-bbpa7d,
[data-css-bbpa7d] {
  display: block;
  margin: auto;
  background-color: #0C98EB;
  min-height: 100vh;
  max-width: 50em;
}

<div
  className="css-bbpa7d"
/>
`;

exports[`enzyme.shallow 2`] = `
.css-bbpa7d,
[data-css-bbpa7d] {
  display: block;
  margin: auto;
  background-color: #0C98EB;
  min-height: 100vh;
  max-width: 50em;
}

<div
  className="css-bbpa7d"
/>
`;

exports[`enzyme.shallow 3`] = `
.css-y4xjd7,
[data-css-y4xjd7] {
  display: block;
  margin: auto;
  background-color: #042C43;
  min-height: 100vh;
  max-width: 50em;
}

<div
  className="css-y4xjd7"
/>
`;
